# gpuops

./: README.md  pyproject.toml
src/gpuops/: __init__.py  actions.py  alerts.py  cli.py  formatting.py  history.py  models.py  nvidia.py  process_info.py  ui.py
tests/: test_alerts_history_actions.py  test_nvidia.py
