[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuops"
version = "0.1.0"
description = "A small GPU operations CLI for shared lab servers."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "GPUOps contributors" }]
dependencies = []

[project.scripts]
gpuops = "gpuops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
